<resources>
    <string name="app_name">TakeNote</string>

    <!-- Items -->
    <string name="title_item_details">Notice</string>
    <string name="title_add_item">New Notice</string>
    <string name="hint_search_items">Search for notices</string>
    <string name="hint_getting_items">No notices available</string>

    <!-- Notices -->
    <string name="title_edit_item">Edit Notice</string>
    <string name="save_item">SAVE</string>
    <string name="delete_item">DELETE</string>


    <string name="hint_add_item">Drop a link to a notice</string>
    <string name="add_item">Add</string>
    <string name="clear_item">Clear</string>
    <string name="clear_all_item">Refresh</string>

    <!-- Dummy Strings -->
    <string name="dummy_title">Nevis</string>
    <string name="dummy_item">Nevis</string>
    <string name="dummy_territory">Nevis</string>
    <string name="dummy_venue">Cayon Community Centre</string>
    <string name="dummy_id">3456789ugf5678</string>
    <string name="dummy_department">Youth Ministry</string>
    <string name="dummy_date">14th December, 2020</string>
    <string name="dummy_description">
        There are many variations of passages of Lorem Ipsum available, but the
        majority have suffered alteration in some form, by injected humour
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">    Hello blank fragment</string>
    <string name="back_button_description"> Back Button</string>
    <string name="title_items">             Take Note</string>
    <string name="view_website">            View Website</string>
    <string name="hint_description">        Text of notice</string>
    <string name="label_description">       Description</string>
    <string name="label_level_four">        PostDoc</string>
    <string name="label_level_three">       PhD</string>
    <string name="label_level_two">         PostGrad/Masters</string>
    <string name="label_level_one">         Bachelors</string>
    <string name="label_level_zero">        Short Course</string>
    <string name="label_level">             Academic Level</string>
    <string name="hint_date">               3rd May, 2020 at 9:30pm</string>
    <string name="label_date">              Date</string>
    <string name="label_venue">             Venue</string>
    <string name="hint_venue">              Where is the event happening?</string>
    <string name="label_coverage_partial">  Partial (part tuition or stipend)</string>
    <string name="label_coverage_tuition">  Tuition</string>
    <string name="label_coverage_full">     Full (tuition plus stipend)</string>
    <string name="label_coverage">          Costs Covered</string>
    <string name="hint_department">         Ministry the notice applies to</string>
    <string name="label_department">        Department</string>
    <string name="hint_territory">          Church/territory the notice applies to</string>
    <string name="label_territory">         Territory</string>
    <string name="hint_vetted">             Make item visible to public</string>
    <string name="label_vetted">            Vetting Status</string>
    <string name="login_btn">               ENTER</string>
    <string name="hint_login">              Enter your PIN</string>
    <string name="label_login">             Secure PIN</string>
    <string name="title_login">             Login</string>
    <string name="title_edit_list">         Manage Notices</string>
</resources>
