<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ItemDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/colorBackground">

        <!-- Large Text w/Icons on Right -->
        <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_bar_height"

                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"

                app:layout_constraintTop_toTopOf="parent"

                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/back_item_details"
                    android:layout_width="48dp"
                    android:layout_height="48dp"

                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"

                    android:layout_marginLeft="-16dp"

                    android:layout_gravity="center"

                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="@color/colorPrimary"/>

            <TextView
                    android:id="@+id/top_bar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="3"

                    android:text="@string/title_item_details"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/lg_text_size"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.03"

                    android:gravity="left|center"

                    android:lines="1" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorOutline"

                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"

                app:layout_constraintTop_toBottomOf="@id/top_bar"

                android:layout_gravity="top"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/top_bar">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"

                    android:paddingTop="@dimen/line_vertical_margin"

                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                <TextView
                        android:id="@+id/item_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/dummy_title"
                        android:textSize="@dimen/md_text_size"
                        android:textColor="@color/colorText"
                        android:fontFamily="@font/lato_bold"
                        android:textStyle="bold"
                        android:letterSpacing="0.05"

                        android:layout_marginBottom="16dp"

                        android:gravity="left|center" />

                <TextView
                        android:id="@+id/item_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/dummy_id"
                        android:textSize="@dimen/sm_text_size"
                        android:textColor="@color/colorTextGrey"
                        android:fontFamily="@font/lato"
                        android:letterSpacing="0.05"
                        android:lineSpacingExtra="8dp"

                        android:layout_marginBottom="16dp"

                        android:gravity="left|center" />

                <TextView
                        android:id="@+id/item_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/dummy_item"
                        android:textSize="@dimen/md_text_size"
                        android:textColor="@color/colorText"
                        android:fontFamily="@font/lato"
                        android:letterSpacing="0.05"
                        android:lineSpacingExtra="8dp"

                        android:layout_marginBottom="64dp"

                        android:gravity="left|center" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>