
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AddItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"

            android:background="@color/colorBackground">

        <!-- Large Text w/Icons on Right -->
        <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_bar_height"

                app:layout_constraintTop_toTopOf="parent"

                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/back_item_add"
                    android:layout_width="48dp"
                    android:layout_height="48dp"

                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"

                    android:layout_marginLeft="-16dp"

                    android:layout_gravity="center"

                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="@color/colorIcon"/>

            <TextView
                    android:id="@+id/top_bar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="3"

                    android:text="@string/title_add_item"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/lg_text_size"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.03"

                    android:gravity="start|center"

                    android:lines="1" />

            <TextView
                    android:id="@+id/clear_item_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:layout_gravity="end"

                    android:text="@string/clear_item"
                    android:textSize="@dimen/sm_text_size"
                    android:textColor="@color/colorError"
                    android:fontFamily="@font/lato_bold"
                    android:letterSpacing="0.03" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/colorOutline"

                app:layout_constraintTop_toBottomOf="@id/top_bar"

                android:layout_gravity="top"/>

        <!-- Name of Award/edit_item_title_label -->
        <TextView
                android:id="@+id/add_item_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="left|center"

                app:layout_constraintTop_toBottomOf="@id/top_bar"

                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"

                android:text="@string/label_link"
                android:textSize="@dimen/lg_text_size"
                android:textColor="@color/colorText"
                android:fontFamily="@font/lato_bold"
                android:letterSpacing="0.05"/>

        <EditText
                android:id="@+id/add_item_text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/outline"

                app:layout_constraintTop_toBottomOf="@id/add_item_label"

                android:gravity="center|top"

                android:hint="@string/hint_add_item"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorText"
                android:textSize="@dimen/md_text_size"
                android:fontFamily="@font/lato"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="8dp"

                android:lines="3"
                android:singleLine="false"

                android:padding="@dimen/activity_horizontal_margin"

                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"

                android:imeOptions="actionSearch|flagNoExtractUi"
                android:hapticFeedbackEnabled="true"/>

        <TextView
                android:id="@+id/add_item_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"

                app:layout_constraintTop_toBottomOf="@id/add_item_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:gravity="center"
                android:layout_gravity="center_horizontal"

                android:text="@string/add_item"
                android:textSize="@dimen/lg_text_size"
                android:textColor="@color/colorIcon"
                android:fontFamily="@font/lato_bold"
                android:letterSpacing="0.1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>