
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".admin.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/colorBackground">

        <!-- Large Text w/Icons on Right -->
        <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_bar_height"

                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"

                android:background="@color/colorTopBarBackground"

                app:layout_constraintTop_toTopOf="parent"

                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/back_item_login"
                    android:layout_width="48dp"
                    android:layout_height="48dp"

                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"

                    android:layout_marginLeft="-16dp"

                    android:layout_gravity="center"

                    android:src="@drawable/ic_arrow_back_black_24dp"
                    app:tint="@color/colorIcon"/>

            <TextView
                    android:id="@+id/top_bar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="3"

                    android:text="@string/title_login"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/lg_text_size"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.03"

                    android:gravity="start|center"

                    android:lines="1" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"

                android:background="@color/colorBackground"

                app:layout_constraintTop_toBottomOf="@id/top_bar">

            <!-- Name of Award/edit_item_title_label -->
            <TextView
                    android:id="@+id/login_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="left|center"

                    app:layout_constraintTop_toBottomOf="@id/top_bar"

                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"

                    android:text="@string/label_login"
                    android:textSize="@dimen/lg_text_size"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.05"/>

            <EditText
                    android:id="@+id/login_text"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/outline"

                    app:layout_constraintTop_toBottomOf="@id/login_label"

                    android:gravity="center|top"

                    android:hint="@string/hint_login"
                    android:textColorHint="@color/colorTextHint"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/dl_text_size"
                    android:inputType="numberPassword"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.06"
                    android:lineSpacingExtra="8dp"

                    android:lines="1"
                    android:singleLine="true"

                    android:padding="@dimen/activity_horizontal_margin"

                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"

                    android:imeOptions="actionGo"
                    android:hapticFeedbackEnabled="true"/>

            <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="32dp"

                    app:layout_constraintTop_toBottomOf="@id/login_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:gravity="center"
                    android:layout_gravity="center_horizontal"

                    android:text="@string/login_btn"
                    android:textSize="@dimen/lg_text_size"
                    android:textColor="@color/colorTextHighlight"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.1"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>